# event-driven-banking-platform

./: .env.aws.example  .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_JOURNAL.md  LOCAL_SETUP.md  README.md  docker-compose.aws.yml  docker-compose.yml
FraudPython/: Dockerfile  (+5 more)
SubbyPythonLoan/: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  loan_model.pkl  pyproject.toml  requirements.txt  scaler.pkl  train.py
SubbyPythonLoan/.github/workflows/: cl.yml
SubbyPythonLoan/alembic/: env.py  script.py.mako
SubbyPythonLoan/alembic/versions/: 001_init.py  002_processed_events_state.py
SubbyPythonLoan/scripts/: standalone-localstack-init.sh  standalone-postgres-init.sql
SubbyPythonLoan/src/: config.py  db.py  logging_config.py  main.py  metrics.py
SubbyPythonLoan/src/api/: debug.py
SubbyPythonLoan/src/messaging/: schemas.py  sns_publisher.py  sqs_consumer.py  topics.py
SubbyPythonLoan/src/model/: predictor.py
SubbyPythonLoan/src/worker/: risk_worker.py
SubbyPythonLoan/tests/: conftest.py  test_integration.py  test_risk_worker.py  test_sqs_consumer.py
findoc-verify/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_local.py
findoc-verify/alembic/: env.py
findoc-verify/alembic/versions/: 001_initial.py  002_pipeline_events_and_apikey_scopes.py  003_applicant_dob.py  004_processed_events_state.py  005_admin_list_index.py  006_policy_thresholds.py  007_field_overrides_and_pipeline_runs.py  008_gemini_cache.py
findoc-verify/scripts/: generate_api_key.py  localstack-init.sh
findoc-verify/src/: auth.py  config.py  logging_config.py  main.py
findoc-verify/src/api/: admin.py  admin_observability.py  applications.py  health.py  schemas.py
findoc-verify/src/db/: models.py  session.py
findoc-verify/src/messaging/: sns_publisher.py  sqs_consumer.py  topics.py
findoc-verify/static/: app.js  index.html
findoc-verify/tests/: conftest.py  test_aggregate_worker.py  test_audit_log.py  test_auth_scopes_and_rate_limit.py  test_classify_worker.py  test_compliance.py  test_cross_doc.py  test_endpoint_auth_matrix.py  test_extract_worker.py  test_extractor.py  test_fraud_worker.py  test_gemini_cache.py  test_idempotency.py  test_integration.py  test_ocr_worker.py  test_result_publisher.py  test_risk_worker.py  test_sqs_consumer.py
findoc-verify/webui/: index.html  package-lock.json  package.json  tailwind.config.js
(+393 files in other folders)
