[project]
name = "findoc-verify"
version = "0.1.0"
description = "Event-driven KYC + loan-origination document verification service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.35.0,<1.36.0",
    "botocore>=1.35.0,<1.36.0",
    "python-multipart>=0.0.12",
    "google-cloud-documentai>=2.29.0",
    "google-generativeai>=0.8.3",
    "rapidfuzz>=3.9.7",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "python-json-logger>=2.0.7",
    "pypdf>=5.0.1",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "testcontainers>=4.8.1",
    "ruff>=0.6.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
